add TopicController
