# routes/web.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\GroupController;
+use App\Http\Controllers\TopicController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/', function () {
@@ -9,3 +10,5 @@ Route::get('/', function () {
 
 Route::get('/groups', [GroupController::class, 'getAll']);
 Route::get('/groups/{id}', [GroupController::class, 'getById']);
+
+Route::get('/topics/{id}', [TopicController::class, 'getById']);
